Hero spacing fixes

--- a/assets/scss/_index.scss
+++ b/assets/scss/_index.scss
@@ -69,7 +69,7 @@ $font-secondary: 'Koulen', sans-serif;
 
 @media (min-width: 744px) {
     #hero {
-        padding: 200px 132px 136px 132px;
+        padding: 200px 132px 144px 132px;
         margin: 0 -100px 0 -100px;
         background-image: url("../immagini/bg_hero_tablet.png");
         background-repeat: no-repeat;
@@ -86,35 +86,35 @@ $font-secondary: 'Koulen', sans-serif;
 
     #hero h2 {
         font-size: 28px;
-        margin-top: 104px;
+        margin-top: 96px;
         margin-bottom: 20px;
     }
 }
 
 @media (min-width: 880px) {
     #hero {
-        padding-bottom: 148px;
+        padding-bottom: 156px;
         background-position: bottom 8px right 100px;
     }
 }
 
 @media (min-width: 970px) {
     #hero {
-        padding-bottom: 160px;
+        padding-bottom: 168px;
         background-position: bottom 14px right 100px;
     }
 }
 
 @media (min-width: 1040px) {
     #hero {
-        padding-bottom: 172px;
+        padding-bottom: 180px;
         background-position: bottom 18px right 100px;
     }
 }
 
 @media (min-width: 1180px) {
     #hero {
-        padding-bottom: 196px;
+        padding-bottom: 204px;
         background-position: bottom 30px right 100px;
         background-size: 1180px auto;
     }
